# magiclink-core-api-sdk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  rustfmt.toml
src/: core_api.rs  domain.rs  dto.rs  lib.rs
