[package]
name = "magiclink-server-wallets-api"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Yue Li <li.yue.rex@gmail.com>"]
categories = ["finance", "api-bindings"]
description = "Rust sdk of magic.link core api"
repository = "https://github.com/YueLiRex/magiclink-core-api-sdk"
homepage = "https://github.com/YueLiRex/magiclink-core-api-sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.48.0", features = ["full"] }

reqwest = { version = "0.13", features = ["json"] }
reqwest-middleware = { version = "0.5", features = ["json"] }
reqwest-retry = "0.9"
reqwest-tracing = "0.7"

serde = { version = "1", features = ["derive"] }
anyhow = { version = "1" }
human-panic = "2"
lazy_static = "1.4"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"

[dev-dependencies]
serde_json = "1"

[lib]
name = "magiclink_server_wallets_api"

# See more at https://github.com/johnthagen/min-sized-rust
[profile.release]
#codegen-units = 1
lto = true
opt-level = "s"
strip = true

